fixing the issue where the background img wont display on mobile safari

--- a/styles/sass/_footer.scss
+++ b/styles/sass/_footer.scss
@@ -1,8 +1,15 @@
 footer {
     background-image: url('../assets/header-background.gif');
-    background-repeat: no-repeat;
-    background-position: 25% 40%;
-    background-attachment: fixed;
+    background-position:center; 
+    background-attachment:scroll; 
+    -o-background-size:cover; 
+    -moz-background-size:cover; 
+    -webkit-background-size:cover; 
+    background-size:cover; 
+    background-repeat:no-repeat;
+    // background-repeat: no-repeat;
+    // background-position: 25% 40%;
+    // background-attachment: fixed;
     padding: 2rem;
     h2 {
         font-size: 10rem;
